<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->
<resources>
    <string name="help_force_browser">Force API Browser</string>
   <string
    name="stop_all">Stop All</string>
  <string
    name="application_title">SL4A</string>
  <string
    name="application_nice_title">Scripting Layer for Android</string>
  <string
    name="wiki_url">http://code.google.com/p/android-scripting/wiki/TableOfContents?tm=6
  </string>
  <string
    name="youtube_url">http://www.youtube.com/view_play_list?p=07A81E6CE96F158B
  </string>
  <string
    name="text_preferences">Text</string>
  <string
    name="title_fontsize_preference">Font size</string>
  <string
    name="summary_fontsize_preference">Choose character height in pixels.</string>
  <string
    name="dialog_title_fontsize_preference">Font size</string>
  <string
    name="title_color_preference">Colors</string>
  <string
    name="summary_color_preference">Choose text color.</string>
  <string
    name="dialog_title_color_preference">Text color</string>
  <string
    name="keyboard_preferences">Keyboard</string>
  <string
    name="title_controlkey_preference">Control key</string>
  <string
    name="summary_controlkey_preference">Choose control key.</string>
  <string
    name="dialog_title_controlkey_preference">Control key</string>
  <string
    name="shell_preferences">Shell</string>
  <string
    name="title_shell_preference">Command line</string>
  <string
    name="summary_shell_preference">Specify the shell command line.</string>
  <string
    name="dialog_title_shell_preference">Shell</string>
  <string
    name="title_initialcommand_preference">Initial command</string>
  <string
    name="summary_initialcommand_preference">Sent to the shell when it starts.</string>
  <string
    name="dialog_title_initialcommand_preference">Initial Command</string>
  <string
    name="default_value_fontsize_preference">10</string>
  <string
    name="default_value_color_preference">1</string>
  <string
    name="default_value_controlkey_preference">0</string>
  <string
    name="no_scripts_message">Start adding scripts and interpreters by pressing the menu
    button.</string>
  <string
    name="no_apis_message">No matching APIs found.</string>  
  <string
    name="notification_action_message">Tap to open Script Monitor.</string>
  <string
    name="no_running_scripts_message">There are no currently running scripts.</string>
  <string
    name="script_number_message">Number of running scripts:\t</string>
  <string
    name="no_triggers_message">No triggers.</string>
  <string
    name="no_bluetooth_devices_message">No Bluetooth devices found.</string>
  <string
    name="search_description_scripts">Search scripts</string>
  <string
    name="search_description_apis">Search APIs</string>
    
  <string name="prompt_process_exited">Process has exited.\nClose terminal?</string>
  <string name="prompt_confirm_exit">Confirm exit.\nKill process?</string>
  
  <string name="terminal_copy_done">Copied %1$d bytes to clipboard</string>
  <string name="terminal_copy_start">Touch and drag\nor use directional pad\nto select area to copy</string>
  
  
  <string name="terminal_menu_close">Close</string>
  <string name="terminal_menu_copy">Copy</string>
  <string name="terminal_menu_paste">Paste</string>
  <string name="terminal_menu_resize">Force Size</string>
  
  <string name="button_resize">Resize</string>
  
  <!-- Name for the scrollback size preference -->
  <string name="pref_scrollback_title">Scrollback size</string>
  <!-- Description of the scrollback size preference -->
  <string name="pref_scrollback_summary">Size of scrollback buffer to keep in memory for each console</string>
  <!-- Name for the rotation mode preference -->
  <string name="pref_rotation_title">Rotation mode</string>
  <!-- Summary for the rotation mode preference -->
  <string name="pref_rotation_summary">How to change rotation when keyboard popped in/out</string>
    <!-- Name for the full screen preference -->
  <string name="pref_fullscreen_title">Full screen</string>
  <!-- Summary for the full screen preference -->
  <string name="pref_fullscreen_summary">Hide status bar while in console</string>
    <!-- Name for the keyboard shortcuts preference -->
  <string name="pref_keymode_title">Directory shortcuts</string>
  <!-- Summary for the keyboard shortcuts preference -->
  <string name="pref_keymode_summary">Select how to use Alt for \'/\' and Shift for Tab</string>
  <!-- Name for the camera shortcut usage preference -->
  <string name="pref_camera_title">Camera shortcut</string>
  <!-- Summary for the camera shortcut usage preference -->
  <string name="pref_camera_summary">Select which shortcut to trigger when the camera button is pushed</string>
  <!-- Name for the keep screen on preference -->
  <string name="pref_keepalive_title">Keep screen awake</string>
  <!-- Summary for the camera shortcut usage preference -->
  <string name="pref_keepalive_summary">Prevent the screen from turning off when working in a console</string>
  <!-- Name for the haptic feedback (bumpy arrow) preference -->
  <string name="pref_bumpyarrows_title">Bumpy arrows</string>
  <!-- Summary for the haptic feedback (bumpy arrow) preference -->
  <string name="pref_bumpyarrows_summary">Vibrate when sending arrow keys from trackball</string>
  <string name="pref_hidekeyboard_title">Hide Keyboard</string>
  <string name="pref_hidekeyboard_summary">Hide soft keyboard in terminal on startup</string>
  <!-- Category title for the Terminal Bell preferences -->
  <string name="pref_bell_category">Terminal bell</string>
  <!-- Checkbox preference title for the audible terminal bell feature -->
  <string name="pref_bell_title">Audible bell</string>
  <!-- Title for the slider preference to set the volume -->
  <string name="pref_bell_volume_title">Bell volume</string>
  <!-- Checkbox preference title for the vibrate on terminal bell feature -->
  <string name="pref_bell_vibrate_title">Vibrate on bell</string>
  <string name="pref_fontsize_title">Font size (pt)</string>
      <!-- Setting for what key code is sent to the server when DEL key is pressed. -->
  <string name="pref_delkey_title">DEL Key</string>
  <!-- Summary for field asking what key code is sent to the server when DEL key is pressed. -->
  <string name="pref_delkey_summary">The key code sent when DEL key is pressed</string>
  <!-- Host character encoding preference title -->
  <string name="pref_encoding_title">Encoding</string>
  <!-- Host character encoding preference summary -->
  <string name="pref_encoding_summary">Character encoding for the host</string>
  <string name="pref_hide_notifications">Hide Notifications</string>
      <!-- Default screen rotation preference selection -->
  <string name="list_rotation_default">Default</string>
  <string name="list_rotation_land">Force landscape</string>
  <string name="list_rotation_port">Force portrait</string>
  <!-- Selection to indicate the rotation should be selected automatically based on the tilt sensor. -->
  <string name="list_rotation_auto">Automatic</string>
    <!-- Preference selection to indicate use of right side of keyboard for special shortcuts. -->
  <string name="list_keymode_right">Use right-side keys</string>
  <!-- Preference selection to indicate use of left side of keyboard for special shortcuts. -->
  <string name="list_keymode_left">Use left-side keys</string>
  <!-- Preference selection to indicate never to use special shortcut keys. -->
  <string name="list_keymode_none">Disable</string>
    <!-- Selection to indicate pressing the Camera button should send "Ctrl+A then Space". -->
  <string name="list_camera_ctrlaspace">Ctrl+A then Space</string>
  <!-- Selection to indicate pressing the Camera button should send "Ctrl+A". -->
  <string name="list_camera_ctrla">Ctrl+A</string>
  <!-- Selection to indicate pressing the Camera button should send the "Esc" key. -->
  <string name="list_camera_esc">Esc</string>
  <!-- Selection to indicate pressing the Camera button should send "Esc+A". -->
  <string name="list_camera_esc_a">Esc+A</string>
  <!-- Selection to indicate pressing the Camera button should send nothing at all. -->
  <string name="list_camera_none">None</string>
    <!-- Name for the backspace character -->
  <string name="list_delkey_backspace">Backspace</string>
  <!-- Name for the ASCII DEL character -->
  <string name="list_delkey_del">Delete</string>
  
  <!-- Window title for Help index -->
  <string name="title_help">Help</string>
  
  <string name="help_acks">SL4A uses <a href="http://code.google.com/p/connectbot/">ConnectBot</a> terminal.</string>
  <string name="help_intro">Please select a topic below for more information on a particular subject.</string>
  <string name="enable_auto_close">Enable Auto Close</string>
  
</resources>
