<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
    android:title="General">
    <CheckBoxPreference
      android:key="usagetracking"
      android:title="Usage tracking"
      android:summary="Allow anonymous usage tracking."
      android:defaultValue="false" />
    <EditTextPreference android:summary="Port to use for running server. Leave at 0 for random selection." android:key="use_service_port" android:title="Server Port" android:defaultValue="0" android:numeric="integer"></EditTextPreference>
  </PreferenceCategory>
  <PreferenceCategory
    android:title="Script Manager">
    <CheckBoxPreference
      android:key="show_all_files"
      android:title="Show all files"
      android:defaultValue="false" />
    <CheckBoxPreference android:defaultValue="true" android:key="use_quick_menu" android:title="Use QuickActions Menu"></CheckBoxPreference>
  </PreferenceCategory>
  <PreferenceCategory
    android:title="Script Editor">
    <ListPreference
      android:key="editor_fontsize"
      android:defaultValue="@string/default_value_fontsize_preference"
      android:title="@string/title_fontsize_preference"
      android:summary="@string/summary_fontsize_preference"
      android:entries="@array/entries_fontsize_preference"
      android:entryValues="@array/entryvalues_fontsize_preference"
      android:dialogTitle="@string/dialog_title_fontsize_preference" />
  <CheckBoxPreference android:title="@string/help_force_browser" android:key="helpForceBrowser" android:defaultValue="true" android:summary="Force API Help to use default Android Browser"></CheckBoxPreference>
  <CheckBoxPreference android:summary="When enabled, quotes and brackets are automatically completed." android:key="enableAutoClose" android:title="@string/enable_auto_close" android:defaultValue="true"></CheckBoxPreference>
  <CheckBoxPreference android:title="No Wrap" android:summary="Don't wrap text in editor" android:key="editor_no_wrap"></CheckBoxPreference>
  <CheckBoxPreference android:key="editor_auto_indent" android:defaultValue="false" android:summaryOff="Auto Indent Disabled" android:summaryOn="Auto Indent Enabled" android:title="Auto Indent"></CheckBoxPreference>
</PreferenceCategory>
  <PreferenceCategory
    android:title="Terminal">
    <EditTextPreference
      android:key="scrollback"
      android:title="@string/pref_scrollback_title"
      android:summary="@string/pref_scrollback_summary"
      android:defaultValue="140" />
    <EditTextPreference
      android:key="fontsize"
      android:title="@string/pref_fontsize_title"
      android:defaultValue="10" />
    <org.connectbot.util.EncodingPreference
      android:key="encoding"
      android:title="@string/pref_encoding_title"
      android:summary="@string/pref_encoding_summary" />
    <ListPreference
      android:key="rotation"
      android:title="@string/pref_rotation_title"
      android:summary="@string/pref_rotation_summary"
      android:entries="@array/list_rotation"
      android:entryValues="@array/list_rotation_values"
      android:defaultValue="Default" />
    <Preference
      android:key="color"
      android:title="@string/title_color_preference"
      android:summary="@string/summary_color_preference">
      <intent
        android:action="com.googlecode.android_scripting.PICK_TERMINAL_COLORS" />
    </Preference>
    <CheckBoxPreference
      android:key="fullscreen"
      android:title="@string/pref_fullscreen_title"
      android:summary="@string/pref_fullscreen_summary"
      android:defaultValue="false" />
    <ListPreference
      android:key="delkey"
      android:title="@string/pref_delkey_title"
      android:summary="@string/pref_delkey_summary"
      android:entries="@array/list_delkey"
      android:entryValues="@array/list_delkey_values" />
    <ListPreference
      android:key="keymode"
      android:title="@string/pref_keymode_title"
      android:summary="@string/pref_keymode_summary"
      android:entries="@array/list_keymode"
      android:entryValues="@array/list_keymode_values"
      android:defaultValue="Use right-side keys" />
    <ListPreference
      android:key="camera"
      android:title="@string/pref_camera_title"
      android:summary="@string/pref_camera_summary"
      android:entries="@array/list_camera"
      android:entryValues="@array/list_camera_values"
      android:defaultValue="Ctrl+A then Space" ></ListPreference>
    <CheckBoxPreference
      android:key="keepalive"
      android:title="@string/pref_keepalive_title"
      android:summary="@string/pref_keepalive_summary"
      android:defaultValue="true" />
    <CheckBoxPreference
      android:key="bumpyarrows"
      android:title="@string/pref_bumpyarrows_title"
      android:summary="@string/pref_bumpyarrows_summary"
      android:defaultValue="true" />
    <CheckBoxPreference
      android:key="hidekeyboard"
      android:title="@string/pref_hidekeyboard_title"
      android:summary="@string/pref_hidekeyboard_summary"
      android:defaultValue="false" />
  </PreferenceCategory>
  <PreferenceCategory
    android:title="Terminal bell">
    <CheckBoxPreference
      android:key="bell"
      android:title="@string/pref_bell_title"
      android:defaultValue="true" />
    <org.connectbot.util.VolumePreference
      android:key="bellVolume"
      android:title="@string/pref_bell_volume_title" />
    <CheckBoxPreference
      android:key="bellVibrate"
      android:title="@string/pref_bell_vibrate_title"
      android:defaultValue="true" />
  </PreferenceCategory>
  <PreferenceCategory
	  android:title="Trigger Behaviour">
	  <CheckBoxPreference 
	    android:key="hideServiceNotifications"
		android:title="@string/pref_hide_notifications" 
		android:defaultValue="false" />
	</PreferenceCategory>
</PreferenceScreen>